# Xeth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xeth.pro
cmake/: app.cmake  bin.cmake  deps.cmake  html.cmake  lib.cmake  resources.cmake  test.cmake  unit-tests.cmake  utils.cmake
cmake/modules/: FindCryptoPP.cmake  FindJsonCPP.cmake  FindLevelDB.cmake
doc/: build.md  build_arch.md  build_fedora.md  build_opensuse.md  build_osx.md  build_ubuntu.md  build_ubuntu14.md  build_windows.md  linux_generic.md  stealth.md
includes.pro/: app.pro  dependencies.pri  destination.pri  lib.pro  test.pro
resources/: css.qrc  icon.qrc  index.html  js.qrc  template.qrc  test.html  test2.html  xeth.qrc
resources/CSS/: addressbook.css  bitprofile.css  daterangepicker.css  dependencies.xml  form.css  main.css  page.css  receive.css  send.css  settings.css  transactions.css
resources/html/: index.html
resources/icon/: xeth.icns
resources/js/: TemplateRegistry.js  XETH.js  accounts.js  addressbook.js  app.js  bitprofile.js  daterangepicker.js  dependencies.xml  editAddress.js  exportAddress.js  exportBitprofile.js  importAddress.js  importBitprofile.js  jquery-editable-poshytip.js  newAddress.js  notie.js  receive.js  send.js  transactions.js  ui.js
resources/template/: account_item.tpl  account_null.tpl  accounts.tpl  addressbook.tpl  bitprofile.tpl  bitprofile_form.tpl  change_password.tpl  contact_item.tpl  export.tpl  generate.tpl  (+12 more)
shortcuts/: xeth_testnet.desktop
src/: AddressBookFacade.hpp  Application.cpp  Application.hpp  BigInt.hpp  ConfigFacade.hpp  DataBase.cpp  DataBase.hpp  Enum.hpp  EthProcess.cpp  EthProcess.hpp  EthProcessSupervisor.cpp  FrameContextBuilder.cpp  FrameContextBuilder.hpp  Settings.cpp  Settings.hpp  Settings.ipp  StealthKey.hpp  Synchronizer.cpp  Synchronizer.hpp  WalletFacade.cpp  WalletFacade.hpp  Window.cpp  Window.hpp  macros.hpp  main.cpp  version.hpp
test/: AccountScanCriterionTest.cpp  AccountScanCriterionTest.hpp  AddressBookStoreTest.hpp  AddressValidatorTest.hpp  BlockChainProgressTest.cpp  BlockChainProgressTest.hpp  BlockChainSimulator.cpp  BlockChainSimulator.hpp  DataBaseDirectory.hpp  DataRangeTest.hpp  EthereumKeyImporterTest.cpp  EthereumKeyImporterTest.hpp  EthereumKeyStoreTest.cpp  EthereumKeyStoreTest.hpp  KeyAttributesReaderTest.cpp  KeyAttributesReaderTest.hpp  ScanActionTest.cpp  ScanActionTest.hpp  ScanCriteriaTest.cpp  ScanCriteriaTest.hpp  ScanIndexStoreTest.cpp  ScanIndexStoreTest.hpp  ScanProgressTest.cpp  ScanProgressTest.hpp  StealthKeyImporterTest.cpp  StealthKeyImporterTest.hpp  StealthKeyStoreTest.hpp  StealthScanCriterionTest.hpp  StoreRangeTest.cpp  StoreRangeTest.hpp  TransactionStoreTest.cpp  TransactionStoreTest.hpp  main.cpp
utils/: HtmlExtractor.cpp  HtmlExtractor.hpp  HtmlMerger.cpp  HtmlMerger.hpp  JavascriptInvoker.cpp  JavascriptInvoker.hpp  SyncWebView.cpp  SyncWebView.hpp  UnderscoreCompiler.cpp  compiler.cpp  cssmin.cpp  dumpdb.cpp  editor.cpp  index.html  js.qrc  jsmin.cpp  minifier.cpp  resource_include.cpp  reveal.cpp  templatewizard.cpp  utils.cpp  utils.hpp
(+635 files in other folders)
